Send message and read messages
